objects/ASI_KOR_Contact_Document__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residence Card Photo</fullName>
                </value>
                <value>
                    <fullName>Bank Book Photo</fullName>
                </value>
                <value>
                    <fullName>Business Card Photo</fullName>
                </value>
                <value>
                    <fullName>Keyman Signature Image</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_FeedItemId__c</fullName>
        <label>FeedItemId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_FileId__c</fullName>
        <label>FileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_File_Ext__c</fullName>
        <label>File Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_File_Size__c</fullName>
        <label>File Size (KB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Image_URL_Input__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Image_URL__c</fullName>
        <formula>IF( ISBLANK( ASI_KOR_FeedItemId__c )
, ASI_KOR_Image_URL_Input__c
, IF( 
CASE(LOWER( ASI_KOR_File_Ext__c ) 
, &apos;png&apos;, 1 
, &apos;jpg&apos;, 1 
, &apos;gif&apos;, 1 
, &apos;jpeg&apos;, 1 
, &apos;jfif&apos;, 1 
, &apos;tiff&apos;, 1 
,0) = 1 
, &apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB120BY90&amp;versionId=&apos; &amp; ASI_KOR_FileId__c &amp; &apos;&amp;operationContext=CHATTER&apos; 
, NULL 
)
)</formula>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ASI_KOR_FileId__c, ASI_KOR_File_Name__c)</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Parent__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Documents</relationshipLabel>
        <relationshipName>ASI_KOR_Contact_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Preview__c</fullName>
        <formula>IF(ISBLANK(ASI_KOR_Image_URL__c), ASI_KOR_File_Name__c, IMAGE(ASI_KOR_Image_URL__c, ASI_KOR_File_Name__c, 90, 90))</formula>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Con_Doc_ID__c</fullName>
        <externalId>true</externalId>
        <label>SYS_INFO_Con_Doc_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Contact Document</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contact Doc No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>